<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.day2_27.MultiListActivity">

    <android.support.v7.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"
        android:id="@+id/multi_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/multi_list_delete"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_list_delete" />

        <Button
            android:layout_weight="1"
            android:id="@+id/multi_list_Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_list_Inverse" />

        <Button
            android:layout_weight="1"
            android:id="@+id/multi_list_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_list_all" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/multi_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
