<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.day2_27.PlayMusicActivity">

    <ImageView
        android:src="@drawable/ic_blackground"
        android:scaleType="centerCrop"
        android:id="@+id/play_music_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/play_music_toolbar"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.administrator.day2_27.GramophoneView
        android:id="@+id/gramophone_view"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:picture_radius="70sp"
        app:disk_rotate_speed="0.2"
        app:src="@drawable/music"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/play_music_toolbar" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/play_music_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/play_music_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/current_song_title"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/play_music_singer"
                android:text="@string/current_song_singer"
                android:textColor="#fff"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="77dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="154dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="231dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="307dp" />

    <ImageView
        android:id="@+id/play_music_play_pause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/play"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/play_music_last"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/last"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/play_music_next"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/next"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/play_music_mode"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/cycle"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.545"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <SeekBar
        android:id="@+id/play_music_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/play_music_current_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/play_music_current_time"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginTop="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/play_music_total_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/play_music_current_time"
        android:gravity="center"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

</android.support.constraint.ConstraintLayout>